[package]
name = "mpdnavi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.8"
url = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-all"] }
mpd = "0.1.0"
clap = "4.6.1"
