[package]
name = "mpdnavi"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.8"
url = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mpd = "0.1.0"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
indexmap = "2.14.0"
symphonia = "0.6.0"
rodio = "0.22.2"
event-listener = "5.4.1"
